<resources>
    <string name="tb_app_name">Taskbar Lite</string>
    <string name="tb_app_name_debug">Taskbar Lite (Debug)</string>
    <string name="tb_taskbar_is_active">Taskbar Lite is active</string>
    <string name="tb_click_to_open_settings">Click to open settings</string>
    <string name="tb_action_show">Show Taskbar Lite</string>
    <string name="tb_action_hide">Hide Taskbar Lite</string>
    <string name="tb_action_show_alt">Show</string>
    <string name="tb_action_hide_alt">Hide</string>
    <string name="tb_action_quit">Quit</string>
    <string name="tb_action_grant_permission">Grant permission</string>
    <string name="tb_action_open_settings">Open Settings</string>
    <string name="tb_permission_dialog_title">Permission needed</string>
    <string name="tb_permission_dialog_message">%s requires permission to draw over other apps before it can start.\n\n</string>
    <string name="tb_permission_dialog_instructions_phone">Please press \"Grant Permission\" and ensure that \"Permit drawing over other apps\" is enabled.</string>
    <string name="tb_permission_dialog_instructions_tv">Please press \"Open Settings\" to open the Android TV app settings menu. Select \"Special app access\", then select \"Display over other apps\" and ensure that Taskbar Lite is enabled.</string>
    <string name="tb_pref_header_general">General settings</string>
    <string name="tb_pref_title_start_menu_layout">Start menu layout</string>
    <string name="tb_pref_title_background_tint">Background tint</string>
    <string name="tb_pref_title_scrollbar">Use fast scrollbar on start menu</string>
    <string name="tb_pref_title_start_on_boot">Launch on boot</string>
    <string-array name="tb_pref_start_menu_list">
        <item>Grid</item>
        <item>List</item>
    </string-array>
    <string name="tb_pref_title_freeform_hack">Freeform window support</string>
    <string name="tb_pref_description_freeform_hack">Allows Taskbar Lite to launch apps in freeform window mode, for a more desktop-like experience.\n\nThis feature is experimental, and may cause issues with standard split-screen multitasking.</string>
    <string name="tb_pref_header_about">About Taskbar Lite</string>
    <string name="tb_pref_about_description">Taskbar Lite: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla\n\nClick here to check for updates or leave a rating! %2$s</string>
    <string name="tb_pref_about_description_alt">Taskbar Lite: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla</string>
    <string name="tb_pref_title_hide_taskbar">Collapse Taskbar Lite when selecting items</string>
    <string name="tb_pref_title_launcher">Replace home screen</string>
    <string name="tb_pref_description_launcher">Use Taskbar Lite as a home screen replacement</string>
    <string name="tb_set_wallpaper">Set wallpaper using&#8230;</string>
    <string name="tb_pref_disable_animations">Faster app switching</string>
    <string name="tb_pref_title_position">Position on screen</string>
    <string-array name="tb_pref_position_list">
        <item>Bottom left (horizontal)</item>
        <item>Bottom left (vertical)</item>
        <item>Bottom right (horizontal)</item>
        <item>Bottom right (vertical)</item>
        <item>Top left (horizontal)</item>
        <item>Top left (vertical)</item>
        <item>Top right (horizontal)</item>
        <item>Top right (vertical)</item>
    </string-array>
    <string name="tb_app_info">App info</string>
    <string name="tb_uninstall">Uninstall</string>
    <string name="tb_open_taskbar_settings">Open settings</string>
    <string name="tb_quit_taskbar">Quit</string>
    <string name="tb_loading_apps">Loading apps&#8230;</string>
    <string name="tb_nothing_to_see_here">Nothing to see here, move along&#8230;</string>
    <string name="tb_error_dialog_title">Error</string>
    <string name="tb_error_dialog_message">Unfortunately, due to OEM restrictions, this feature can\'t be enabled on your device.\n\nYou may still be able to enable it by using this adb shell command:\n\nappops set %1$s %2$s allow</string>
    <string name="tb_action_ok">OK</string>
    <string name="tb_action_cancel">Cancel</string>
    <string name="tb_pref_title_theme">Theme</string>
    <string-array name="tb_pref_theme_list">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="tb_pref_title_shortcut_icon">Show shortcut icon for pinned apps</string>
    <string name="tb_freeform_dialog_title">Enable freeform support</string>
    <string name="tb_freeform_dialog_message">In order for Taskbar Lite to launch apps in freeform window mode, please follow these steps:\n\n&#8226; Go to Developer Options\n\n&#8226; Scroll to the bottom and turn on \"%s\"\n\n&#8226; Reboot your device</string>
    <string name="tb_pref_title_invisible_button">Hide button while Taskbar Lite is collapsed</string>
    <string name="tb_pref_title_freeform_mode_help">Help &amp; instructions for freeform mode</string>
    <string name="tb_freeform_help_dialog_title">Help &amp; instructions</string>
    <string name="tb_freeform_help_dialog_message"><b>About freeform mode</b>\n\nTaskbar Lite lets you launch apps in freeform floating windows on Android 7.0+ devices.  No root access is required, although Android 8.0, 8.1, and 9 devices require an adb shell command to be run during initial setup.\n\nSimply follow these steps to configure your device for launching apps in freeform mode:\n\n<b>1.</b> Check the box for \"Freeform window support\" inside the Taskbar Lite app\n\n<b>2.</b> Follow the directions that appear in the pop-up to enable the proper settings on your device (one-time setup)\n\n<b>3.</b> Go to your device\'s recent apps page and clear all recent apps\n\n<b>4.</b> Start Taskbar Lite, then select an app to launch it in a freeform window\n\n<i>For best results, especially on Android 8.0 and 8.1, restart your device before using freeform mode</i>\n\n<b>Window size presets</b>\n\nTaskbar Lite can launch app windows in various preset sizes.  You can choose a window size by long-pressing or right-clicking an app icon and selecting \"New window.\"\n\nTo save a window size preset for a specific app, simply long-press the preset, and a checkmark will appear indicating that it is set as default.  Taskbar Lite will launch the app using this selected size on subsequent launches.\n\nNote that window sizes don\'t work correctly on Android 8.0 and 8.1.  However, you can work around this by launching the app, immediately closing it, then launching it again from Android\'s overview menu.\n\n<b>Troubleshooting</b>\n\n<i>&#8226; Apps still launch fullscreen</i>\n\nIf an app is launched that is already loaded into memory, Taskbar Lite will bring it into the foreground. In order to launch the app into freeform mode, it has to be launched from a fresh state.\n\nSwipe the app away from recents, and then re-launch it from the recent apps page using Taskbar Lite. If this doesn\'t work, then long-press the app icon, select \"App info,\" and then force stop the app.  Alternatively, you can restart your device.\n\n<i>&#8226; Apps that are maximized cannot be restored into a window</i>\n\nIf you press the Maximize button on an app\'s title bar, Android will bring the app out of freeform mode and into fullscreen mode. As mentioned above, Taskbar Lite can only launch apps into freeform windows if they are launched from a fresh state.\n\nTo fix this, you can maximize windows by tapping or clicking just outside the app\'s window frame.  This will expand the window to fill all the available space while keeping it in the freeform window workspace.\n\n<i>&#8226; Maximizing windows doesn\'t work on Android 9</i>\n\nThis functionality is beyond Taskbar Lite\'s control and is something that Google needs to fix on their end. If you need to maximize a window on Android 9, please use the \"Maximized\" window size instead.\n\n<i>&#8226; App transitions don\'t seem to work properly, especially on Android 9</i>\n\nThis is also an issue that Google needs to fix on their end, however, you can work around it by disabling app transitions.\n\nYou can disable transitions when launching an app by going to Taskbar Lite\'s recent apps settings and enabling the \"Faster app switching\" option. Alternatively, you can disable transitions system-wide by going to developer options and setting \"Transition animation scale\" to \"Animation off.\"</string>
    <string name="tb_action_developer_options">Open Developer Options</string>
    <string name="tb_action_close">Close</string>
    <string name="tb_pref_header_freeform">Freeform mode</string>
    <string name="tb_pref_title_window_size">Default window size</string>
    <string name="tb_window_size_standard">Standard</string>
    <string name="tb_window_size_fullscreen">Maximized</string>
    <string name="tb_window_size_phone_size">Phone size</string>
    <string name="tb_window_size_large">Large</string>
    <string name="tb_window_size_half_left">@string/tb_window_size_half_left_alt</string>
    <string name="tb_window_size_half_left_alt">Half screen (left/top)</string>
    <string name="tb_window_size_half_right">@string/tb_window_size_half_right_alt</string>
    <string name="tb_window_size_half_right_alt">Half screen (right/bottom)</string>
    <string name="tb_pref_title_blacklist">Configure apps in start menu</string>
    <string name="tb_app_hidden">1 app hidden</string>
    <string name="tb_apps_hidden">%1$d apps hidden</string>
    <string name="tb_blacklist_dialog_title">Hidden</string>
    <string name="tb_top_app">1 top app</string>
    <string name="tb_top_apps">%1$d top apps</string>
    <string name="tb_top_apps_dialog_title">Top apps</string>
    <string name="tb_start_menu_apps">Start menu apps</string>
    <string name="tb_reboot_required">Reboot your device to complete freeform mode setup</string>
    <string name="tb_enable_force_activities_resizable">Scroll to the bottom and turn on \"%s\"</string>
    <string name="tb_set_as_default_home">Press \"Always\" to set Taskbar Lite as your default launcher</string>
    <string name="tb_enable_developer_options">Enable Developer Options by tapping on the build number 7 times</string>
    <string name="tb_pref_title_anchor">Anchor Taskbar Lite when screen rotates</string>
    <string name="tb_pref_title_donate">Donate</string>
    <string name="tb_pref_summary_donate">Support the development of Taskbar Lite with a small donation by upgrading to the Donate Version</string>
    <string name="tb_dialog_donate_message">Support the development of Taskbar Lite by upgrading to the Donate Version for %1$s!\n\nThe Donate Version is identical to the free version and your preferences will automatically transfer over.\n\nTaskbar Lite is and will always be 100%% free, open source, with absolutely no ads.  However, your support is greatly appreciated!</string>
    <string name="tb_action_no_thanks">No thanks</string>
    <string name="tb_pref_title_hide_when_keyboard_shown">Automatically collapse Taskbar Lite</string>
    <string name="tb_pref_description_hide_when_keyboard_shown">When the on-screen keyboard is shown</string>
    <string name="tb_pref_max_num_of_recents">Max number of recent/pinned apps</string>
    <string name="tb_show_window_sizes">New window&#8230;</string>
    <string name="tb_icon_pack">Icon pack</string>
    <string name="tb_icon_pack_none">None</string>
    <string name="tb_no_icon_packs_installed">No icon packs installed</string>
    <string name="tb_apply_icon_pack">Apply icon pack</string>
    <string name="tb_apply_icon_pack_description">Apply \"%1$s\" to Taskbar Lite?</string>
    <string name="tb_pref_title_chrome_os_context_menu_fix">Chrome OS dock compatibility fix</string>
    <string name="tb_pref_description_chrome_os_context_menu_fix">Enable this if using Taskbar Lite alongside the Chrome OS dock</string>
</resources>